Fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ section {
   display: flex;
   width: 50%;
   flex-wrap: wrap;
+  
 }
 
 .container > p {
@@ -48,45 +49,61 @@ section {
 }
 
 .calculator-left > div {
-  flex: 0 0 33%;
-  background: rgba(184, 182, 182, 0.5);
-  margin: 1px;
-  padding: 2px;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 30%;
+  height: 60%;
+  border: 1px solid rgb(172, 171, 171); 
+  background: #E0E0E0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .calculator-right > div {
-  flex: 0 0 19.7%;
-  margin: 1px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 60%;
+  border: 1px solid rgb(172, 171, 171);  
   background-color: #f5913e;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .container > div:first-child {
   flex: 0 0 100%;
   text-align: right;
-  background: rgba(100, 100, 100, 0.5);
-  font-size: 4em;
+  background: #858693;
+  font-size: 2em;
   color: aliceblue;
-  padding-right: 5px;
+  padding: 15px;
 }
 
 .calculator-left {
   display: flex;
-  font-size: 4em;
-  flex-wrap: wrap;
-  text-align: center;
+  font-size: 1em;
+  flex-wrap: wrap;  
   width: 78%;
+  height: 90%;
   color: black;
+  align-items: center;
   margin: 0;
+  font-weight: bold;  
 }
 
 .calculator-left > div:nth-child(13) {
-  flex: 0 0 66.3%;
+  flex: 0 0 66.6%;
 }
 
 .calculator-right {
   display: flex;
   flex-direction: column;
   width: 22%;
-  font-size: 4em;
+  font-size: 1em;
   text-align: center;
+  font-weight: bold;  
 }
